infrastructure/keycloak/deploy-keycloak.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infrastructure

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: infrastructure
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: 10.20.50.25:8081/keycloak/keycloak:26.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          args:
            - start-dev
            - --import-realm
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: infrastructure
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: infrastructure
spec:
  ingressClassName: haproxy
  rules:
    - host: auth.infrastructure.kub.k2.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080

--- # Secrets
apiVersion: v1
kind: Secret
metadata:
  name: "keycloak-admin-secret"
  namespace: infrastructure
stringData:
  KEYCLOAK_ADMIN: admin
  KEYCLOAK_ADMIN_PASSWORD: admin

--- # Configs
apiVersion: v1
kind: ConfigMap
metadata:
  name: "keycloak-config"
  namespace: infrastructure
data:
  KC_HTTP_ENABLED: 'true'
  KC_PROXY_HEADERS: 'xforwarded'
  KC_HOSTNAME_STRICT: "false"
  #KC_HTTP_RELATIVE_PATH: "/auth"
  KC_HOSTNAME: https://auth.infrastructure.kub.k2.lan
